--- a/final-website-project/styles/medium.css
+++ b/final-website-project/styles/medium.css
@@ -30,6 +30,23 @@
         display: none;
      }
 
+     .bountiful-banner h1{
+      width: 30ch;
+     }
+
+     .comp {
+      font-size: 2rem;
+    }
+    
+    .moto {
+      font-size: 1.4rem;
+      font-style: italic;
+    }
+
+     .welcome {
+      font-size: 1.7rem;
+    }
+
      .coastal-weather {
       display: grid;
     grid-template-columns: 1fr 1fr;
